# GammaPBHPlotter

./: .coveragerc  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  citation.cff  genindex.html  index.html  main.py  objects.inv  out.csv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: gammapbh.cli.doctree  gammapbh.doctree  index.doctree  modules.doctree
.github/workflows/: ci.yml
GammaPBHPlotter-test-stack-verify-20251123-1556/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  citation.cff  manifest.in  pyproject.toml.broken-20251111-011116
GammaPBHPlotter-test-stack-verify-20251123-1556/paper/: paper.bib  paper.md
GammaPBHPlotter-test-stack-verify-20251123-1556/tests/: conftest.py  pytest.ini  test_utils.py
Paper/: Paper.bib  Paper.md
Paper/jats/: paper.jats
_modules/: index.html
_modules/gammapbh/: api.html  cli.html
api/: gammapbh.cli.html  gammapbh.html  index.html  modules.html
blackhawk_data/1.0e+14/: 1.0e+14.txt  BH_spectrum.txt  final_state_radiation_prim.txt  final_state_radiation_sec.txt  inflight_annihilation_prim.txt  inflight_annihilation_sec.txt  instantaneous_primary_spectra.txt  instantaneous_secondary_spectra.txt  instantaneous_total_spectra.txt
blackhawk_data/1.0e+15/: 1e+15.txt  BH_spectrum.txt  final_state_radiation_prim.txt  final_state_radiation_sec.txt  inflight_annihilation_prim.txt  inflight_annihilation_sec.txt  instantaneous_primary_spectra.txt  instantaneous_secondary_spectra.txt  instantaneous_total_spectra.txt
blackhawk_data/1.0e+16/: 1e+16.txt  BH_spectrum.txt  final_state_radiation_prim.txt  final_state_radiation_sec.txt  inflight_annihilation_prim.txt  inflight_annihilation_sec.txt  instantaneous_primary_spectra.txt  instantaneous_secondary_spectra.txt  instantaneous_total_spectra.txt
docs/: requirements.txt
examples/: plot_single_mass.py
paper/: Paper.md  paper.md  paper.tex  references.bib
tests/: conftest.py  test_align_behavior.py  test_cli_flows.py  test_cli_help.py  test_discover_and_load.py  test_errors.py  test_generation_and_io.py  test_import_and_version.py  test_totals_consistency.py
(+1037 files in other folders)
